--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ h1{
     margin-top: -10%;
 }
 
+#buttons{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
 #box-container{
     display: flex;
     justify-content: center;
